[SPR-10] test: Transactional 테스트 추가